# mini-cluster

docker/: Dockerfile.scheduler  docker-compose.yaml
rust/mini-cluster-scheduler/: Cargo.toml
rust/mini-cluster-scheduler/src/: err.rs  lib.rs  main.rs  scheduler.rs  worker_proxy.rs
rust/mini-cluster-worker/: .gitignore  Cargo.toml  build.rs
rust/mini-cluster-worker/src/: db.rs  err.rs  file.rs  fixtures.rs  job.rs  lib.rs  main.rs
rust/mini-cluster-worker/tests/: integration_test.rs
rust/mini-cluster-worker/tests/artifacts/: simple-with-header.csv
rust/protos/: workload.proto
