[package]
name = "mini-cluster-scheduler"
version = "0.1.0"
authors = ["Aleksey Bilogur <aleksey@residentmar.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
async-trait = "0.1.48"
tokio = { version = "1.3.0", features = ["net", "io-util"] }
protobuf = "2.3"
# mini-cluster-worker = { git = "https://github.com/ResidentMario/mini-cluster"}
